<resources>
    <string name="app_name">rayz</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_opciones123">opciones123</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="temporizador">Temporizador</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="editar_mis_datos">Editar mis datos</string>
    <string name="gesti_n_de_cuenta">Gestión de cuenta</string>
    <string name="todo">TODO</string>
    <string name="inicio_de_sesi_n">Inicio de Sesión</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="rayz">Rayz</string>
    <string name="seleccionar_dispositivo">Seleccionar dispositivo</string>
    <string name="conectar">Conectar</string>
    <string name="desconectar">Desconectar</string>
    <string name="ir_a_menu_principal">Ir a menu principal</string>
    <string name="ir_a_gesti_n_de_cuenta">Ir a gestión de cuenta</string>
    <string name="volver_al_inicio_de_sesi_n">Volver al inicio de sesión</string>
    <string name="control_de_dispositivos">Control de dispositivos</string>
    <string name="rayz1">Rayz</string>
    <string name="volver_atras">Volver atras</string>
    <string name="control_manual">Control Manual</string>
    <string name="aplicar_color">Aplicar color</string>
    <string name="cambiar_color">Cambiar color</string>
    <string name="ajustar_brillo">Ajustar brillo</string>
    <string name="menu">Menu</string>
    <string name="rayz3">Rayz</string>
    <string name="apagar">Apagar</string>
    <string name="volver_al_men">Volver al menú</string>
    <string name="encender">Encender</string>
    <string name="control_manual1">Control manual</string>
    <string name="todo1">TODO</string>
    <string name="volver_al_inicio_de_sesi_n1">Volver al inicio de sesión</string>
    <string name="registrarse1">Registrarse</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="contrase_a1">Contraseña</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="registro_de_usuario">Registro de usuario</string>
    <string name="rayz4">Rayz</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
</resources>