<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:background="@color/yellow"
    tools:context=".PostLogin">

    <!-- Contenido principal -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PostLogin">


        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.Material3.ActionBar"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="160dp"
            android:layout_height="114dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/rayzcircular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />



        <TextView
            android:id="@+id/menutitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/menu"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <Button
            android:id="@+id/btnajustar_brillo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/yellow2"
            android:padding="12dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/ajustar_brillo"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/menutitle"
            tools:layout_editor_absoluteX="0dp" />

        <SeekBar
            android:id="@+id/btnBrillo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="100"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:progress="50"
            app:layout_constraintTop_toBottomOf="@+id/btnajustar_brillo"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/btncambiarcolor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/yellow2"
            android:padding="12dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/cambiar_color"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/btnBrillo"
            tools:layout_editor_absoluteX="0dp" />

        <!-- Contenedor para seleccionar colores -->
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/btncambiarcolor">

            <View
                android:id="@+id/color_rojo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="#FF0000" />

            <View
                android:id="@+id/color_verde"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="#00FF00" />

            <View
                android:id="@+id/color_azul"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="#0000FF" />

            <View
                android:id="@+id/color_amarillo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="#FFFF00" />

            <View
                android:id="@+id/color_cian"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="#00FFFF" />
        </LinearLayout>

        <!-- Botón para aplicar el color seleccionado -->
        <Button
            android:id="@+id/btnaplicar_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:padding="12dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/aplicar_color"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <!-- Botón para el temporizador -->
        <Button
            android:id="@+id/btntemporizador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/yellow2"
            android:padding="12dp"
            android:text="@string/temporizador"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/btnaplicar_color"
            tools:layout_editor_absoluteX="0dp" />

        <SeekBar
            android:id="@+id/Seektemporizador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:max="100"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:progress="10"
            app:layout_constraintTop_toBottomOf="@+id/btntemporizador"
            tools:layout_editor_absoluteX="0dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_navigation"
        app:menu="@menu/activity_main_drawer" />


</androidx.drawerlayout.widget.DrawerLayout>